@@ -11,6 +11,7 @@ Version 2.0.13
 Improvements
 
     ST-216 Add support for new-style account level API methods
+    ST-222 Update instance type for servers
 
 Fixed
 
